--- a/public/index.html
+++ b/public/index.html
@@ -124,7 +124,111 @@
         "https://www.facebook.com/triviaverse",
         "https://www.twitter.com/triviaverse",
         "https://www.linkedin.com/company/triviaverse"
+      ],
+      "contact": {
+        "@type": "ContactPoint",
+        "contactType": "Customer Service",
+        "email": "support@triviaverse.site"
+      }
+    }
+    </script>
+    
+    <!-- BreadcrumbList Schema for Navigation -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BreadcrumbList",
+      "itemListElement": [
+        {
+          "@type": "ListItem",
+          "position": 1,
+          "name": "Home",
+          "item": "https://triviaverse.site"
+        },
+        {
+          "@type": "ListItem",
+          "position": 2,
+          "name": "About",
+          "item": "https://triviaverse.site/about"
+        },
+        {
+          "@type": "ListItem",
+          "position": 3,
+          "name": "Help",
+          "item": "https://triviaverse.site/help"
+        },
+        {
+          "@type": "ListItem",
+          "position": 4,
+          "name": "Blog",
+          "item": "https://triviaverse.site/blog"
+        }
       ]
+    }
+    </script>
+
+    <!-- FAQPage Schema for Rich Snippets -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "FAQPage",
+      "mainEntity": [
+        {
+          "@type": "Question",
+          "name": "How do I create a quiz on TriviaVerse?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Sign up for an account, navigate to Quiz Management, and follow our intuitive quiz creation wizard to add questions and set difficulty levels."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Is TriviaVerse free to use?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Yes! TriviaVerse offers free access to all core features including taking quizzes, tracking progress, and competing on leaderboards."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Can I create team quizzes?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Absolutely! You can create custom quizzes and invite team members to compete together with our team management features."
+          }
+        }
+      ]
+    }
+    </script>
+
+    <!-- Offer/Pricing Schema -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Service",
+      "name": "Interactive Quiz Platform",
+      "description": "Comprehensive online quiz platform with leaderboards, progress tracking, and team management",
+      "provider": {
+        "@type": "Organization",
+        "name": "TriviaVerse",
+        "url": "https://triviaverse.site"
+      },
+      "areaServed": "World",
+      "hasOfferCatalog": {
+        "@type": "OfferCatalog",
+        "name": "TriviaVerse Services",
+        "itemListElement": [
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Service",
+              "name": "Free Quiz Platform"
+            },
+            "price": "0",
+            "priceCurrency": "USD"
+          }
+        ]
+      }
     }
     </script>
   </head>
