favicon url update

--- a/public/index.html
+++ b/public/index.html
@@ -86,7 +86,7 @@
       "name": "TriviaVerse",
       "alternateName": "Interactive Quiz Platform",
       "url": "https://triviaverse.site",
-      "logo": "https://triviaverse.site/logo.png",
+      "logo": "https://triviaverse.site/favicon.ico",
       "description": "Interactive quiz platform for testing knowledge, tracking progress, and competing with others worldwide",
       "applicationCategory": "EducationalApplication",
       "operatingSystem": "Web Browser",
